trunk/Archive2/61/6e40c1afea6c18/output
+ g++ -std=c++1y -Wall -pedantic -Wextra main.cpp
main.cpp:16:31: error: expected primary-expression before 'void'
   using type = decltype(check<void>(0));
                               ^
main.cpp:16:31: error: expected ')' before 'void'
main.cpp:16:16: error: expected type-specifier before 'decltype'
   using type = decltype(check<void>(0));
                ^
+ clang++ -std=c++1y -Wall -pedantic -Wextra main.cpp
+ ./a.out
